modify responses.go & healthcheck.go
