# docs/swagger.json
@@ -29,7 +29,7 @@
                     {
                         "type": "string",
                         "description": "Request ID generated by client",
-                        "name": "Client-Request-ID",
+                        "name": "P-Request-ID",
                         "in": "header"
                     }
                 ],
@@ -38,6 +38,12 @@
                         "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/models.StandardJSONResponse"
+                        },
+                        "headers": {
+                            "string": {
+                                "type": "string",
+                                "description": "P-Request-ID"
+                            }
                         }
                     }
                 }
