# pkg/handlers/healthcheck.go
@@ -17,13 +17,14 @@ import (
 // @Tags root
 // @Accept */*
 // @Produce json
-// @Param Client-Request-ID header string false "Request ID generated by client"
+// @Param P-Request-ID header string false "Request ID generated by client"
 // @Success 200 {object} models.StandardJSONResponse
+// @Header	200	{string}	string	"P-Request-ID"
 // @Router /healthcheck [get]
 func HealthCheck(c echo.Context) error {
 
 	//Get client request ID from header if available
-	clientRequestID := c.Request().Header.Get("Client-Request-ID")
+	pRequestID := c.Request().Header.Get(responses.ClientRequestID)
 
 	serverTraceID := c.Response().Header().Get(echo.HeaderXRequestID)
 
@@ -36,9 +37,9 @@ func HealthCheck(c echo.Context) error {
 
 	var reply models.StandardJSONResponse
 	reply.Code = responses.SuccessCode
-	reply.ServerTraceID = serverTraceID
-	reply.ClientRequestID = clientRequestID
 	reply.Message = "I'm ok"
 
+	c.Response().Header().Set(responses.ClientRequestID, pRequestID)
+	c.Response().WriteHeader(http.StatusOK)
 	return c.JSON(http.StatusOK, reply)
 }
